# sdtctl

./: .gitignore  LICENSE  pyproject.toml
sdtctl/: __main__.py  config.py
sdtctl/cli/: __init__.py
sdtctl/cli/commands/: __init__.py  list_timers.py
sdtctl/dbus/: __init__.py  adapters.py  connection.py  constants.py  interfaces.py  manager.py  systemd.py  types.py  unit.py  unit_generator.py
sdtctl/models/: __init__.py  creation_results.py  system.py  systemd_unit.py  timer.py  timer_config.py
sdtctl/services/: timer_service.py
sdtctl/system/: __init__.py  constants.py  providers.py  unit_file_manager.py
sdtctl/systemd/: __init__.py  connection.py  manager.py  models.py  types.py
sdtctl/time/: converters.py
sdtctl/tui/: app.py
sdtctl/tui/screens/: timer_list.py
sdtctl/utils/: __init__.py  base_model.py  converters.py
